--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,48 +9,203 @@
 body {
     box-sizing: border-box;
     height: 100%;
+    font-family: "Kumbh Sans";
 }
 
 header {
-    width: 75vw;
+    width: 63rem;
     height: 6rem;
-    background: #ccc;
     margin: 0 auto;
+    display: flex;
+    justify-content: left;
+    border-bottom: 2px solid hsl(223, 64%, 98%);
+}
+
+.logo {
+    width: 9rem;
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    width: 24rem;
+    margin-left: 3rem;
+    display: flex;  
+    align-items: center;
+    justify-content: space-between;
+    color: hsl(219, 9%, 45%);
+}
+
+.header-link {
+    cursor: pointer;
+}
+
+.user-section {
+    margin-left: auto;
+    width: 8rem;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.user-section > img {
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+.user-section > img:hover {
+    cursor: pointer;
+}
+
+#cartBtn {
+    width: 2rem;
+    height: 2rem;
+    border: none;
+    background: transparent;
+}
+
+#cartBtn:hover {
+    cursor: pointer;
+}
+
+.user-section > button > svg {
+    transform: scale(1.2);  
 }
 
 main {
     margin: 5rem auto;
-    width: 70vw;
-    height: 80%;
-    background: #ccc;
+    width: 60rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    border: 1px solid #000;
 }
 
 .product-container {
-    width: 50%;
-    background-color: aqua;
-}
-
-.info-container {
-    width: 50%;
+    width: 27rem;
+    height: 34.3rem;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    /* padding-right: 5rem; */
 }
 
 #image-main {
-    width: 21rem;
-    height: 21rem;
-} 
-
-#image-main > img {
     width: 100%;
     height: auto;
-}
+    border-radius: 20px;
+} 
 
-.image-group {
+.thumbnail-group {
     display: flex;
+    height: auto;
+    width: 100%;
+    /* border: 1px solid #000; */
+    justify-content: space-between;
 }
 
 .thumbnail {
-    width: 4rem;
-    height: 4rem;
+    width: 5.2rem;
+    height: 5.2rem;
+    border-radius: 5px;
+}
+
+.info-container {
+    width: 26.5rem;
+    height: 25rem;
+    border: 1px solid #000;
+    margin-top: 4rem;
+}
+
+.company {
+    color: hsl(26, 100%, 55%);  
+    font-size: 0.75rem;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+    margin-bottom: 1.2rem;
+}
+
+.title {
+    font-size: 2.3rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+.description {
+    margin-bottom: 1.6rem;
+    font-size: 16px;
+    line-height: 1.5rem;
+    color: hsl(219, 9%, 45%);
+}
+
+.pricing {
+    width: 12rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    margin-bottom: 1.6rem;
+}
+
+.current-price {
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.percent-off {
+    background: hsl(25, 100%, 94%);
+    font-weight: 700;
+    width: fit-content;
+    padding: 0.3rem 0.7rem;
+    color: hsl(26, 100%, 55%);
+    border-radius: 7px;
+}
+
+.original-price {
+    color: hsl(220, 14%, 75%);
+    font-weight: 700;
+    text-decoration: line-through;
+} 
+
+.cart-section {
+    /* border: 1px solid #000; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.chooseAmount {
+    display: flex;
+    justify-content: space-between;
+    background: hsl(223, 64%, 98%);
+    margin-right: 1rem;
+    border-radius: 10px;
+}
+
+#plus, #itemAmount, #minus {
+    height: 3rem;
+    width: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: none;
+}
+
+#add-to-cart {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: hsl(26, 100%, 55%);
+    border: none;
+    color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+}
+
+#add-to-cart p {
+    margin-left: 1rem;
+}
+
+#add-to-cart svg {
+    transform: scale(0.8);
 }
