--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     box-sizing: border-box;
     height: 100%;
     font-family: "Kumbh Sans";
+    overflow: auto;
 }
 
 header {
@@ -94,7 +95,7 @@ main {
     border-radius: 20px;
 } 
 
-#image-main:hover {
+#image-main:hover, #modal-img-main:hover {
     cursor: pointer;
 }
 
@@ -108,7 +109,6 @@ main {
 .thumbnail-container {
     width: 5.2rem;
     height: 5.2rem;
-    /* border: 1px solid #000; */
     position: relative;
 }
 
@@ -140,6 +140,42 @@ main {
     border: 2px solid hsl(26, 100%, 55%);
     background: rgba(255, 255, 255, 0.7);
 }
+
+.galleryModal {
+    width: 31.5rem;
+    height: 39rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #000;
+    position: absolute;
+    top: 26.5rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#modal-img-main {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    margin-bottom: 2rem;
+}
+
+.modal-thumbnail-group {
+    display: flex;
+    height: 5.2rem;
+    width: 26rem;
+    justify-content: space-between;
+    border: 1px solid #000;
+}
+
+.modal-thumbnail-container {
+    width: 5.2rem;
+    height: 5.2rem;
+    /* position: relative; */
+    /* border: 1px solid #000; */
+}
+
 
 .info-container {
     width: 26.5rem;
@@ -197,7 +233,6 @@ main {
 } 
 
 .cart-section {
-    /* border: 1px solid #000; */
     display: flex;
     justify-content: space-between;
 }
@@ -258,4 +293,9 @@ footer {
     width: 100%;
     text-align: center;
     padding-top: 2rem;
+}
+
+.galleryModal::backdrop {
+    background: linear-gradient(45deg, red, blue);
+    opacity: .4;
 }
