--- a/style.css
+++ b/style.css
@@ -142,23 +142,72 @@ main {
 }
 
 .galleryModal {
-    width: 31.5rem;
-    height: 39rem;
-    display: flex;
+    width: 30rem;
+    height: 42rem;
+    /* <dialog> element shows if display: flex; */
+    display: none;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #000;
-    position: absolute;
-    top: 26.5rem;
+    position: fixed;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background: none;
+    overflow: visible;
+    border: none;
+}
+
+.galleryModal::backdrop {
+    background: black;
+    opacity: .75;
+}
+
+.close-modal {
+    position: absolute;
+    top: 0rem;
+    right: 0rem;
+    transform: scale(1.2);
+    fill: white;
+    z-index: 1;
+}
+
+.close-modal:hover {
+    cursor: pointer;
+    fill:hsl(26, 100%, 55%);
 }
 
 #modal-img-main {
     width: 100%;
     height: auto;
     border-radius: 20px;
-    margin-bottom: 2rem;
+    margin-bottom: 1.6rem;
+    margin-top: 1.6rem;
+}
+
+.modal-main-img-container {
+    position: relative;
+}
+
+#previous {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left:0;
+    transform: translate(-50%, -50%);
+}
+
+#next {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background: white;
+    position: absolute;
+    right:0;
+    top: 50%;
+    transform: translate(50%, -50%);
 }
 
 .modal-thumbnail-group {
@@ -166,14 +215,11 @@ main {
     height: 5.2rem;
     width: 26rem;
     justify-content: space-between;
-    border: 1px solid #000;
 }
 
 .modal-thumbnail-container {
     width: 5.2rem;
     height: 5.2rem;
-    /* position: relative; */
-    /* border: 1px solid #000; */
 }
 
 
@@ -293,9 +339,4 @@ footer {
     width: 100%;
     text-align: center;
     padding-top: 2rem;
-}
-
-.galleryModal::backdrop {
-    background: linear-gradient(45deg, red, blue);
-    opacity: .4;
 }
