--- a/style.css
+++ b/style.css
@@ -39,6 +39,33 @@ nav {
 
 .header-link {
     cursor: pointer;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.border-bottom {
+    bottom: 0;
+    left:0;
+    position: absolute;
+    height: 3px;
+}
+
+.header-link:hover {
+    color: black;
+}
+
+.header-link:hover .border-bottom {
+    background-color: hsl(26, 100%, 55%);
+    animation: border-bottom-grow 0.5s forwards;
+}
+
+@keyframes border-bottom-grow {
+    from {width: 0%;}
+    to {width: 100%;}   
 }
 
 .user-section {
@@ -47,6 +74,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .user-section > img {
@@ -66,6 +94,15 @@ nav {
     border: none;
     background: transparent;
     position: relative;
+    fill: hsl(219, 9%, 45%);
+}
+
+#cartBtn:hover {
+    fill: hsl(220, 13%, 9%);
+}
+
+#cartBtn > * {
+    pointer-events: none;
 }
 
 .cartNumberIcon {
@@ -369,7 +406,7 @@ main {
     transform: scale(0.8);
 }
 
-#add-to-cart, #plus, #minus:hover {
+#add-to-cart, #plus, #minus, #checkout:hover {
     cursor: pointer;
 }
 
@@ -383,20 +420,194 @@ main {
 
 #minus:hover .minus-icon,
 #plus:hover .plus-icon,
-#add-to-cart:hover {
+#add-to-cart:hover,
+#checkout:hover {
     opacity: 0.7;
 }
 
+.basket-filled {
+    height: 14rem;
+    width: 22rem;
+    position: absolute;
+    top: 95%;
+    right: -4rem;
+    background-color: white;
+    display: none;
+    box-shadow: 20px 0 20px -15px rgba(0, 0, 0, 0.1), 
+                -20px 0 20px -15px rgba(0, 0, 0, 0.1),
+                0 30px 25px -15px rgba(0, 0, 0, 0.2);
+}
 
+.basket-heading {
+    border-bottom: 1px solid hsl(220, 14%, 75%);
+}
 
+.basket-heading p {
+    padding: 1rem 1.5rem;
+    font-weight: bold;
+}
 
+.basket-content {
+    display: flex;
+    flex-direction: column;
+}
 
+.checkout-description {
+    padding: 1.5rem 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
 
+.checkout-description img {
+    width: 3rem;
+    height: auto;
+    border-radius: 5px;
+}
+
+.description-full-price {
+    display: flex;
+    flex-direction: column;
+    color: hsl(219, 9%, 45%);
+}
+
+.description-full-price > p {
+    margin-bottom: auto;
+}
+
+#total-price {
+    font-weight: bold;
+    color: black;
+    margin-left: .5rem;
+}
+
+#delete {
+    align-self: center;
+    border: none;
+    background-color: transparent;
+}
+
+#delete:hover {
+    cursor: pointer;
+}
+
+#delete > * {
+    pointer-events: none;
+}
+
+#delete-icon {
+    fill: hsl(220, 14%, 75%);
+}
+
+#delete:hover #delete-icon {
+    fill: hsl(219, 9%, 45%);
+}
+
+#checkout {
+    border: none;
+    color: white;
+    margin: 0 1.5rem;
+    background-color: hsl(26, 100%, 55%);
+    height: 3rem;
+    border-radius: 10px;
+}
+
+.basket-empty {
+    display: none;
+    flex-direction: column;
+    height: 14rem;
+    width: 22rem;
+    position: absolute;
+    top: 95%;
+    right: -4rem;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 20px 0 20px -15px rgba(0, 0, 0, 0.1), 
+                -20px 0 20px -15px rgba(0, 0, 0, 0.1),
+                0 30px 25px -15px rgba(0, 0, 0, 0.2);
+}
+
+.basket-empty > p {
+    align-self: center;
+    margin-top: auto; 
+    margin-bottom: auto;
+    color: hsl(219, 9%, 45%);
+    font-weight: bold;
+}
+
+.basket-empty > * {
+    pointer-events: none;
+}
 
 footer {
+    margin-top: 10rem;
     height: 3rem;
     background: hsl(25, 100%, 94%);
     width: 100%;
     text-align: center;
     padding-top: 2rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+.menu {
+    display: none;
+}
+
+@media (max-width: 375px) {
+    body {
+        height: 50%;
+    }
+
+    header {
+        width: 100%;
+        height: 4rem;
+    }
+
+    nav {
+        position: absolute;
+        bottom: -50px;
+    }
+
+    .menu {
+        display: block;
+        align-self: center;
+        padding: 1rem;
+        padding-top: 1.3rem;
+        height: auto;
+    }
+
+    .user-section {
+        justify-content: right;
+    }
+
+    #avatar {
+        width: 1.8rem;
+        height: 1.8rem;
+        padding: 1.5rem;
+        margin-right: 0.5rem;
+        border: none;
+    }
+
+    nav {
+        border: 1px solid #000;
+        position: absolute;
+        background-color: white;
+        margin: 0;
+        left: 0;
+        top: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 100vh;
+        width: 14rem;
+        z-index: 1;
+        color: hsl(220, 13%, 13%);
+        font-weight: bold;
+        padding: 1em;
+    }
+
+    .header-link {
+        width: auto;
+    }
 }
