--- a/style.css
+++ b/style.css
@@ -556,10 +556,6 @@ a {
 }
 
 @media (max-width: 375px) {
-    body {
-        height: 50%;
-    }
-
     header {
         width: 100%;
         height: 4rem;
@@ -567,7 +563,20 @@ a {
 
     nav {
         position: absolute;
-        bottom: -50px;
+        border: 1px solid #000;
+        position: absolute;
+        background-color: white;
+        margin: 0;
+        left: 0;
+        bottom: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 14rem;
+        z-index: 1;
+        color: hsl(220, 13%, 13%);
+        font-weight: bold;
+        padding: 1em;
+        display: none;
     }
 
     .menu {
@@ -590,24 +599,25 @@ a {
         border: none;
     }
 
-    nav {
-        border: 1px solid #000;
-        position: absolute;
-        background-color: white;
-        margin: 0;
-        left: 0;
-        top: 0;
-        flex-direction: column;
-        align-items: flex-start;
-        height: 100vh;
-        width: 14rem;
-        z-index: 1;
-        color: hsl(220, 13%, 13%);
-        font-weight: bold;
-        padding: 1em;
-    }
-
     .header-link {
         width: auto;
+    }
+
+    main {
+        flex-direction: column;
+        margin: 0;
+        width: 100%;
+    }
+
+    .main-image-container {
+        width: 100%;
+    }
+
+    #image-main {
+        border-radius: 0;
+    }
+
+    .thumbnail-group {
+        display: none;;
     }
 }
