--- a/style.css
+++ b/style.css
@@ -557,8 +557,8 @@ a {
 
 @media (max-width: 375px) {
     header {
-        width: 100%;
         height: 4rem;
+        width: 100%;
     }
 
     nav {
@@ -589,12 +589,16 @@ a {
 
     .user-section {
         justify-content: right;
+        position: absolute;
+        right: 0;
+        height: 4rem;
     }
 
     #avatar {
         width: 1.8rem;
         height: 1.8rem;
         padding: 1.5rem;
+        padding-right: 0;
         margin-right: 0.5rem;
         border: none;
     }
@@ -610,7 +614,7 @@ a {
     }
 
     .main-image-container {
-        width: 100%;
+        width: 375px;
     }
 
     #image-main {
@@ -618,6 +622,6 @@ a {
     }
 
     .thumbnail-group {
-        display: none;;
+        display: none;
     }
 }
